--- a/uActivityPub/uActivityPub.csproj
+++ b/uActivityPub/uActivityPub.csproj
@@ -4,12 +4,30 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <EnablePackageValidation>true</EnablePackageValidation>
+
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <!-- Not all members are not documented, this temporarly disables the compiler warnings -->
+        <NoWarn>$(NoWarn);CS1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <Authors>Eduward Post</Authors>
+        <Description>A umbraco package user to make your installation interface with the fediverse</Description>
+        <RepositoryUrl>https://github.com/eduwardpost/uActivityPub.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>library, umbraco</PackageTags>
+        <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Umbraco.Cms.Core" Version="10.6.1" />
-      <PackageReference Include="Umbraco.Cms.Infrastructure" Version="10.6.1" />
-      <PackageReference Include="Umbraco.Cms.Web.Common" Version="10.6.1" />
+        <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Umbraco.Cms.Core" Version="10.6.1" />
+        <PackageReference Include="Umbraco.Cms.Infrastructure" Version="10.6.1" />
+        <PackageReference Include="Umbraco.Cms.Web.Common" Version="10.6.1" />
     </ItemGroup>
 
 </Project>
