Another change and disabled icon must've

--- a/uActivityPub/uActivityPub.csproj
+++ b/uActivityPub/uActivityPub.csproj
@@ -18,7 +18,13 @@
         <RepositoryType>git</RepositoryType>
         <PackageTags>library, umbraco</PackageTags>
         <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageProjectUrl>https://www.eduwardpost.nl/blog/federating-my-blog-part-1/</PackageProjectUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
