--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,8 +16,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref_name }}
+          tag: ${{ github.ref }}
+          name: Release ${{ github.ref_name }}
           generateReleaseNotes: true
           draft: false
           prerelease: false
