--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Print version
         run: echo "Creating version ${{github.ref_name}}"
-      - name: Create Github Release
+      - name: Create Release
         uses: ncipollo/release-action@v1.13.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
