--- a/uActivityPub/uActivityPub.csproj
+++ b/uActivityPub/uActivityPub.csproj
@@ -39,5 +39,9 @@
         <PackageReference Include="Umbraco.Cms.Infrastructure" Version="10.7.0" />
         <PackageReference Include="Umbraco.Cms.Web.Common" Version="10.7.0" />
     </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="App_Plugins\uActivityPub\**" ExcludeFromSingleFile="true" CopyToPublishDirectory="Always" />
+    </ItemGroup>
 
 </Project>
