--- a/uActivityPub/uActivityPub.csproj
+++ b/uActivityPub/uActivityPub.csproj
@@ -22,8 +22,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <Product>uActivityPub</Product>
         <PackageId>uActivityPub</PackageId>
-        <Version>1.0.9</Version>
-        <AssemblyVersion>1.0.9</AssemblyVersion>
+        <Version>1.0.10</Version>
+        <AssemblyVersion>1.0.10</AssemblyVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -45,8 +45,9 @@
         <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.0.3" />
     </ItemGroup>
     
-<!--    <ItemGroup>-->
-<!--        <Content Include="App_Plugins\uActivityPub\**" ExcludeFromSingleFile="true" CopyToPublishDirectory="Always" />-->
-<!--    </ItemGroup>-->
-
+    <ItemGroup>
+        <Content Include="App_Plugins\uActivityPub\**" ExcludeFromSingleFile="true" CopyToPublishDirectory="Always" CopyToOutputDirectory="PreserveNewest" />
+        <None Include="build\**" Pack="true" PackagePath="buildTransitive" />
+    </ItemGroup>
+    
 </Project>
