--- a/uActivityPub/uActivityPub.csproj
+++ b/uActivityPub/uActivityPub.csproj
@@ -9,6 +9,7 @@
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <!-- Not all members are not documented, this temporarly disables the compiler warnings -->
         <NoWarn>$(NoWarn);CS1591</NoWarn>
+        <ContentTargetFolders>.</ContentTargetFolders>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -22,8 +23,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <Product>uActivityPub</Product>
         <PackageId>uActivityPub</PackageId>
-        <Version>1.0.12</Version>
-        <AssemblyVersion>1.0.12</AssemblyVersion>
+        <Version>1.0.13</Version>
+        <AssemblyVersion>1.0.13</AssemblyVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -51,7 +52,7 @@
             <CopyToPublishDirectory>Always</CopyToPublishDirectory>
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
-        <None Include="build\**\*.*">
+        <None Include="buildTransitive\**\*.*">
             <Pack>True</Pack>
             <PackagePath>buildTransitive</PackagePath>
         </None>
