--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -38,6 +38,7 @@ jobs:
 
     # Create the NuGet package in the folder from the environment variable NuGetDirectory
     - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
+      working-directory: ./src
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
     - uses: actions/upload-artifact@v3
@@ -79,6 +80,7 @@ jobs:
       uses: actions/setup-dotnet@v3
     - name: Run tests
       run: dotnet test --configuration Release
+      working-directory: ./src
 
   deploy:
     # Publish only when creating a GitHub Release
