Added manual option for documentation build task

--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -2,6 +2,7 @@
 
 name: Build documentation
 on:
+  workflow_dispatch: # Allow running the workflow manually from the GitHub UI
   workflow_run:
     workflows:
       - tagged-release
