--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -10,14 +10,12 @@ on:
       - completed
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/hi
-  # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpHI2-all.zip
+  INSTANCE: Writerside/u
+  ARTIFACT: webHelpU2-all.zip
   # Writerside docker image version
   DOCKER_VERSION: 233.14272
   # Add the variable below to upload Algolia indexes
-  # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-U.zip
 
 jobs:
   build:
