--- a/docs/Writerside/writerside.cfg
+++ b/docs/Writerside/writerside.cfg
@@ -6,5 +6,5 @@
     <images dir="images" web-path="eduwardpost/uActivityPub"/>
     <categories src="c.list"/>
     <vars src="v.list"/>
-    <instance src="hi.tree"/>
+    <instance src="u.tree"/>
 </ihp>
