--- a/src/uActivityPub.Tests/uActivityPub.Tests.csproj
+++ b/src/uActivityPub.Tests/uActivityPub.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
