--- a/src/uActivityPub/uActivityPub.csproj
+++ b/src/uActivityPub/uActivityPub.csproj
@@ -18,7 +18,7 @@
         <Description>A umbraco package user to make your installation interface with the fediverse</Description>
         <RepositoryUrl>https://github.com/eduwardpost/uActivityPub.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageTags>library, umbraco</PackageTags>
+        <PackageTags>library, umbraco, umbraco-marketplace, fediverse</PackageTags>
         <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <Product>uActivityPub</Product>
