--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -42,11 +42,11 @@ jobs:
     # Create the NuGet package in the folder from the environment variable NuGetDirectory
     - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
       working-directory: ./src
-      if: !inputs.prerelease
+      if: ${{ !inputs.prerelease }}
 
     - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }} --version-suffix "prerelease"
       working-directory: ./src
-      if: inputs.prerelease
+      if: ${{ inputs.prerelease }}
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
     - uses: actions/upload-artifact@v4
