--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -130,11 +130,12 @@ jobs:
         dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
 
+  
   deploy:
     # Publish only when creating a GitHub Release
     # https://docs.github.com/en/repositories/releasing-projects-on-github/managing-releases-in-a-repository
     # You can update this logic if you want to manage releases differently
-    if: github.event_name == 'workflow_run'
+    if: github.event_name == 'workflow_run' || inputs.prerelease
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_build_and_test ]
     steps:
