--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -3,6 +3,11 @@
 name: publish
 on:
   workflow_dispatch: # Allow running the workflow manually from the GitHub UI
+    inputs:
+        prerelease:
+            description: 'Set this release as prerelease'
+            default: false
+            type: boolean
   push:
     branches:
       - 'main'       # Run the workflow when pushing to the main branch
@@ -37,6 +42,11 @@ jobs:
     # Create the NuGet package in the folder from the environment variable NuGetDirectory
     - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
       working-directory: ./src
+      if: ${{ !inputs.prerelease }}
+
+    - run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }} --version-suffix "alpha"
+      working-directory: ./src
+      if: ${{ inputs.prerelease }}
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
     - uses: actions/upload-artifact@v4
@@ -120,11 +130,12 @@ jobs:
         dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
 
+  
   deploy:
     # Publish only when creating a GitHub Release
     # https://docs.github.com/en/repositories/releasing-projects-on-github/managing-releases-in-a-repository
     # You can update this logic if you want to manage releases differently
-    if: github.event_name == 'workflow_run'
+    if: github.event_name == 'workflow_run' || inputs.prerelease
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_build_and_test ]
     steps:
