--- a/src/uActivityPub/uActivityPub.csproj
+++ b/src/uActivityPub/uActivityPub.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <EnablePackageValidation>true</EnablePackageValidation>
@@ -43,10 +43,11 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Umbraco.Cms.Core" Version="13.3.2" />
-        <PackageReference Include="Umbraco.Cms.Infrastructure" Version="13.3.2" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="13.3.2" />
-        <PackageReference Include="Umbraco.Cms.Web.Common" Version="13.3.2" />
+        <PackageReference Include="Umbraco.Cms.Api.Management" Version="15.0.0" />
+        <PackageReference Include="Umbraco.Cms.Core" Version="15.0.0" />
+        <PackageReference Include="Umbraco.Cms.Infrastructure" Version="15.0.0" />
+<!--        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="15.0.0" />-->
+        <PackageReference Include="Umbraco.Cms.Web.Common" Version="15.0.0" />
     </ItemGroup>
     
     <ItemGroup>
